@@ -1,3 +1,8 @@
+(09/03/15)
+==========
+
+· ODROID: Added Tweaks > autologin script
+
 (08/03/15)
 ==========
 
